# containerpoker

./: .env.example  .gitignore  Dockerfile  Makefile  ORCHESTRATION.md  README.md  container_orchestrator_prd.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.bat  setup.ps1
src/: app.py
src/orchestrator/: __init__.py  core.py  examples.py  utils.py
src/static/css/: style.css
src/static/js/: app.js
src/templates/: base.html  containers.html  index.html  logs.html
